...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/Edit_buttonId"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:drawableRight="@drawable/ic_baseline_edit_24"

                        />

                    <Button
                        android:id="@+id/DeleteBUttonId"
                        android:layout_width="56dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="240dp"
                        android:drawableRight="@drawable/ic_baseline_delete_24"

                        />
...
